login to docker registry so that a build could use dockercompose/testcontainers if it wanted to do so

--- a/src/jobs/go_build_test.yml
+++ b/src/jobs/go_build_test.yml
@@ -21,6 +21,10 @@ executor: << parameters.executor >>
 
 steps:
   - checkout
+  - login_docker_registry:
+      url: ${DOCKER_JFROG_REGISTRY_URL}
+      username: ${DOCKER_JFROG_USERNAME}
+      password: ${DOCKER_JFROG_PASSWORD}
   - restore_cache:
       keys:
         - 'go-mod-{{ arch }}-{{ checksum "<< parameters.work_dir >>/go.sum"  }}'
