--- a/src/jobs/js_quality_gate_jest_test_runner_job.yml
+++ b/src/jobs/js_quality_gate_jest_test_runner_job.yml
@@ -15,8 +15,7 @@ resource_class: << parameters.resource_class >>
 parallelism: << parameters.parallelism >>
 steps:
   - checkout
-  - attach_workspace:
-      at: .
+  - js_dependencies_restore_from_cache
   - run:
       name: Running tests
       command: |
