use right folder for .m2 cache

--- a/src/commands/maven_cache_artifacts.yml
+++ b/src/commands/maven_cache_artifacts.yml
@@ -18,5 +18,5 @@ parameters:
 steps:
   - save_cache:
       paths:
-        - ~/.m2
+        - ~/.m2/repository
       key: << parameters.prefix >>-{{ checksum "<< parameters.pom_file >>" }}-<< parameters.path >>
