--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,7 +97,7 @@ workflows:
           add-pr-comment: true
           fail-if-semver-not-indicated: true
           publish-version-tag: true
-          ssh-fingerprints: "16:73:8e:25:a8:6a:c7:40:3d:dd:e8:ea:7a:3e:32:67"
+          # ssh-fingerprints: "16:73:8e:25:a8:6a:c7:40:3d:dd:e8:ea:7a:3e:32:67"
           requires:
             - integration-test-1
           filters:
