--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,17 +22,6 @@ parameters:
     type: string
     default: "dev:alpha"
 
-jobs:
-  # Define one or more jobs which will utilize your orb's commands and parameters to validate your changes.
-  integration-test-1:
-    docker:
-      - image: cimg/base:stable
-    steps:
-      - checkout
-      # "greet" is a sample command packaged with this orb config.
-      # This sample integration test will run as long as the greet command exists. Once you remove the greet command you should remove this line.
-      # Push new changes first, before adding new tests to your config.
-
 workflows:
 
   # Prior to producing a development orb (which requires credentials) basic validation, linting, and even unit testing can be performed.
@@ -60,7 +49,6 @@ workflows:
       # Publish development version(s) of the orb.
       - orb-tools/publish-dev:
           orb-name: ricardo/ric-orb
-          context: orb-publishing # A restricted context containing your private publishing credentials. Will only execute if approved by an authorized user.
           requires:
             - approve-publish-dev
             - orb-tools/lint
@@ -72,7 +60,6 @@ workflows:
       # dev:${CIRCLE_SHA1:0:7} version of your orb
       - orb-tools/trigger-integration-tests-workflow:
           name: trigger-integration-dev
-          context: orb-publishing
           requires:
             - orb-tools/publish-dev
 
@@ -84,7 +71,6 @@ workflows:
     when: << pipeline.parameters.run-integration-tests >>
     jobs:
       # Run any integration tests defined within the `jobs` key.
-      - integration-test-1
       # Publish a semver version of the orb. relies on
       # the commit subject containing the text "[semver:patch|minor|major|skip]"
       # as that will determine whether a patch, minor or major
@@ -93,13 +79,10 @@ workflows:
       # e.g. [semver:patch] will cause a patch version to be published.
       - orb-tools/dev-promote-prod-from-commit-subject:
           orb-name: ricardo/ric-orb
-          context: orb-publishing
           add-pr-comment: true
           fail-if-semver-not-indicated: true
           publish-version-tag: true
-          ssh-fingerprints: "5a:16:19:53:0d:26:11:fc:89:40:df:fe:20:6e:20:0f"
-          requires:
-            - integration-test-1
+          ssh-fingerprints: "ff:93:77:29:ec:92:40:38:e9:9e:92:01:a0:fe:bb:36"
           filters:
             branches:
               only:
