--- a/src/commands/slack_failure.yml
+++ b/src/commands/slack_failure.yml
@@ -1,22 +1,22 @@
 description: >
-  This command sends message to channel if action is successful.
-# What will this command do?
-# Descriptions should be short, simple, and clear.
+  This command sends a Slack notification to a channel when the action failed.
 parameters:
   branches:
     type: string
     default: master
-    description: Comma separated list of branches for which notification is sent
-  webhook:
+    description: Regex pattern matching the branches
+  channel:
     type: string
-    description: Slack webhook.
-    default: ${SLACK_WEBHOOK}
+    description: Channel ID
+    default: C0436DZM2TZ
+  mention:
+    type: string
+    description: Name of user or group to mention
+    default: ""
 steps:
-  - slack/status:
-      only_for_branches: << parameters.branches >>
-      fail_only: true
-      failure_message: |
-        :red_circle: $CIRCLE_JOB job has failed!
-        *User*: $CIRCLE_USERNAME
-        *Commit*: https://github.com/ricardo-ch/$CIRCLE_PROJECT_REPONAME/commit/$CIRCLE_SHA1
-      webhook: << parameters.webhook >>
+  - slack/notify:
+      event: fail
+      branch_pattern: << parameters.branches >>
+      template: basic_fail_1
+      channel: << parameters.channel >>
+      mention: << parameters.mention >>
