--- a/src/commands/slack_success.yml
+++ b/src/commands/slack_success.yml
@@ -1,21 +1,22 @@
 description: >
-  This command sends message to channel if action is successful.
-# What will this command do?
-# Descriptions should be short, simple, and clear.
+    This command sends a Slack notification to a channel when the action was successful.
 parameters:
   branches:
     type: string
     default: master
-    description: Comma separated list of branches for which notification is sent
-  webhook:
+    description: Regex pattern matching the branches
+  channel:
     type: string
-    description: Slack webhook.
-    default: ${SLACK_WEBHOOK}
+    description: Channel ID
+    default: C0436DZM2TZ
+  mention:
+    type: string
+    description: Name of user or group to mention
+    default: ""
 steps:
   - slack/status:
-      only_for_branches: << parameters.branches >>
-      success_message: |
-        :tada: $CIRCLE_JOB job has succeeded!
-        *User*: $CIRCLE_USERNAME
-        *Commit*: https://github.com/ricardo-ch/$CIRCLE_PROJECT_REPONAME/commit/$CIRCLE_SHA1
-      webhook: << parameters.webhook >>
+      event: pass
+      branch_pattern: << parameters.branches >>
+      template: basic_success_1
+      channel: << parameters.channel >>
+      mention: << parameters.mention >>
