--- a/src/commands/js_save_build_outputs.yml
+++ b/src/commands/js_save_build_outputs.yml
@@ -3,13 +3,30 @@ parameters:
   build_env:
     type: enum
     enum: [ 'beta', 'prod' ]
-    default: beta
+  app_type:
+    type: enum
+    enum: [ 'legacy', 'nextjs' ]
 steps:
-  - run:
-      name: WORKSPACE - Create /<< parameters.build_env >> folder
-      command: |
-        mkdir -p << parameters.build_env >>
-        cp -r build .next << parameters.build_env >>
+  # if app_type === nextjs
+  - when:
+      condition:
+        equal: [ nextjs, << parameters.app_type >> ]
+      steps:
+        - run:
+            name: WORKSPACE - Create /<< parameters.build_env >> folder [nextjs]
+            command: |
+              mkdir -p << parameters.build_env >>
+              cp -r build .next << parameters.build_env >>
+  # if app_type !== nextjs
+  - unless:
+      condition:
+        equal: [ nextjs, << parameters.app_type >> ]
+      steps:
+        - run:
+            name: WORKSPACE - Create /<< parameters.build_env >> folder [legacy]
+            command: |
+              mkdir -p << parameters.build_env >>
+              cp -r build << parameters.build_env >>
   - persist_to_workspace:
       name: WORKSPACE - persisting to /<< parameters.build_env >>
       root: .
