--- a/src/jobs/js_build_job.yml
+++ b/src/jobs/js_build_job.yml
@@ -1,13 +1,17 @@
 description: >
   Build application
 parameters:
-  resource_class:
-    type: string
-    default: large
+  app_type:
+    type: enum
+    enum: [ 'legacy', 'nextjs' ]
+    default: nextjs
   build_env:
     type: enum
     enum: ['beta', 'prod']
     default: beta
+  resource_class:
+    type: string
+    default: large
 executor: js
 resource_class: << parameters.resource_class >>
 steps:
@@ -20,5 +24,6 @@ steps:
   - run:
       name: Build the application
       command: APP_ENV=<< parameters.build_env >> yarn build
-  - save_build_outputs:
+  - js_save_build_outputs:
+      app_type: << parameters.app_type >>
       build_env: << parameters.build_env >>
