add support for google artifact registry
these changes require the following environment variables in the context:
- GAR_APPLICATION_CREDENTIALS: <json key to be generated>
- DOCKER_GAR_REGISTRY_URL: europe-west1-docker.pkg.dev
- DOCKER_GAR_USERNAME: _json_key
- DOCKER_GAR_PASSWORD: ${GAR_APPLICATION_CREDENTIALS}

--- a/src/commands/docker_build_push.yml
+++ b/src/commands/docker_build_push.yml
@@ -11,7 +11,14 @@ parameters:
 steps:
   - run:
       name: 'docker build'
-      command: docker build -t ric-docker.jfrog.io/ricardo-ch/<< parameters.image_name >>:${CIRCLE_BRANCH}-${CIRCLE_SHA1} .
+      command: docker build .
+  - run:
+      name: 'docker tag'
+      command: |
+        [[ ${JFROG_ENABLED} == "true" ]] && docker tag ric-docker.jfrog.io/ricardo-ch/<< parameters.image_name >>:${CIRCLE_BRANCH}-${CIRCLE_SHA1}
+        [[ ${GAR_ENABLED} == "true" ]] && docker tag europe-west1-docker.pkg.dev/ricardo-platform/docker/<< parameters.image_name >>:${CIRCLE_BRANCH}-${CIRCLE_SHA1}
   - run:
       name: 'docker push'
-      command: docker push ric-docker.jfrog.io/ricardo-ch/<< parameters.image_name >>:${CIRCLE_BRANCH}-${CIRCLE_SHA1}
+      command: |
+        [[ ${JFROG_ENABLED} == "true" ]] && docker push ric-docker.jfrog.io/ricardo-ch/<< parameters.image_name >>:${CIRCLE_BRANCH}-${CIRCLE_SHA1}
+        [[ ${GAR_ENABLED} == "true" ]] && docker push europe-west1-docker.pkg.dev/ricardo-platform/docker/<< parameters.image_name >>:${CIRCLE_BRANCH}-${CIRCLE_SHA1}
