--- a/src/executors/isopod.yml
+++ b/src/executors/isopod.yml
@@ -1,21 +1,13 @@
 description: >
   Isopod executor
 docker:
-  - image: 'ric-docker.jfrog.io/ricardo-ch/isopod:<<parameters.tag>>'
+  - image: 'europe-west1-docker.pkg.dev/ricardo-platform/docker/isopod:<<parameters.tag>>'
     auth:
-      username: <<parameters.username>>
-      password: <<parameters.password>>
+      username: _json_key
+      password: ${GOOGLE_APPLICATION_CREDENTIALS}
 parameters:
   tag:
     default: ${ISOPOD_VERSION}
     description: >
       Pick a specific ricardo-ch/isopod image variant.
     type: string
-  username:
-    type: string
-    description: >
-      Artifactory username.
-  password:
-    type: string
-    description: >
-      Artifactory password.
