--- a/src/jobs/build_push_image.yml
+++ b/src/jobs/build_push_image.yml
@@ -25,6 +25,15 @@ parameters:
   docker_hub_password:
     type: string
     default: $DOCKER_HUB_PASSWORD
+  private_hub_username:
+    type: string
+    default: $DOCKER_JFROG_USERNAME
+  private_hub_password:
+    type: string
+    default: $DOCKER_JFROG_PASSWORD
+  private_hub_url:
+    type: string
+    default: $DOCKER_JFROG_REGISTRY_URL
   gar_username:
     type: string
     default: $DOCKER_GAR_USERNAME
