add support for google artifact registry (#73)
these changes require the following environment variables in the context:

- GAR_APPLICATION_CREDENTIALS: [see 1password](https://start.1password.com/open/i?a=MSNVIFFLNRGSHOM4JGHI76MG6Y&v=cuv5v6wmn362r7i7lr2huklpre&i=2pgccgovd5dpjewpjsp7ddai5q&h=ricardo-ch.1password.com)
- DOCKER_GAR_REGISTRY_URL: `europe-west1-docker.pkg.dev`
- DOCKER_GAR_USERNAME: `_json_key_base64`
- DOCKER_GAR_PASSWORD: `<base64 encoded json key from above>`
- JFROG_ENABLED: `true`
- GAR_ENABLED: `true`

Once we've migrated we can simply remove the JFROG_ENABLED variable from the context to disable pushing to jfrog.

--- a/src/jobs/build_push_image.yml
+++ b/src/jobs/build_push_image.yml
@@ -6,8 +6,6 @@ description: >
 executor:
   name: isopod
   tag: <<parameters.isopod_version>>
-  username: <<parameters.private_hub_username>>
-  password: <<parameters.private_hub_password>>
 
 parameters:
   path:
@@ -36,6 +34,15 @@ parameters:
   private_hub_url:
     type: string
     default: $DOCKER_JFROG_REGISTRY_URL
+  gar_username:
+    type: string
+    default: $DOCKER_GAR_USERNAME
+  gar_password:
+    type: string
+    default: $DOCKER_GAR_PASSWORD
+  gar_url:
+    type: string
+    default: $DOCKER_GAR_REGISTRY_URL
   cache_name:
     type: string
     default: ''
@@ -80,6 +87,10 @@ steps:
       url: <<parameters.private_hub_url>>
       username: <<parameters.private_hub_username>>
       password: <<parameters.private_hub_password>>
+  - login_docker_registry:
+      url: <<parameters.gar_url>>
+      username: <<parameters.gar_username>>
+      password: <<parameters.gar_password>>
   - when:
       condition: <<parameters.cache_name>>
       steps:
