--- a/src/jobs/go_build_test.yml
+++ b/src/jobs/go_build_test.yml
@@ -25,6 +25,10 @@ steps:
       url: ${DOCKER_JFROG_REGISTRY_URL}
       username: ${DOCKER_JFROG_USERNAME}
       password: ${DOCKER_JFROG_PASSWORD}
+  - login_docker_registry:
+      url: ${DOCKER_GAR_REGISTRY_URL}
+      username: ${DOCKER_GAR_USERNAME}
+      password: ${DOCKER_GAR_PASSWORD}
   - restore_cache:
       keys:
         - 'go-mod-{{ arch }}-{{ checksum "<< parameters.work_dir >>/go.sum"  }}'
