--- a/src/jobs/maven_build_test.yml
+++ b/src/jobs/maven_build_test.yml
@@ -28,6 +28,10 @@ steps:
       url: ${DOCKER_JFROG_REGISTRY_URL}
       username: ${DOCKER_JFROG_USERNAME}
       password: ${DOCKER_JFROG_PASSWORD}
+  - login_docker_registry:
+      url: ${DOCKER_GAR_REGISTRY_URL}
+      username: ${DOCKER_GAR_USERNAME}
+      password: ${DOCKER_GAR_PASSWORD}
   - maven_build_test:
       path: << parameters.path >>
   - maven_cache_artifacts:
