accept username and password parameters but dont do anything with it

--- a/src/executors/isopod.yml
+++ b/src/executors/isopod.yml
@@ -11,3 +11,11 @@ parameters:
     description: >
       Pick a specific ricardo-ch/isopod image variant.
     type: string
+  username:
+    type: string
+    description: >
+      [deprecated] Artifactory username.
+  password:
+    type: string
+    description: >
+      [deprecated] Artifactory password.
