accept username and password parameters but dont do anything with it

--- a/src/jobs/docker_build_push.yml
+++ b/src/jobs/docker_build_push.yml
@@ -5,6 +5,8 @@ description: >
 executor:
   name: isopod
   tag: $ISOPOD_VERSION
+  username: <<parameters.private_hub_username>>
+  password: <<parameters.private_hub_password>>
 
 parameters:
   image_name:
