--- a/src/jobs/deploy_job.yml
+++ b/src/jobs/deploy_job.yml
@@ -5,6 +5,8 @@ description: >
 executor:
   name: isopod
   tag: <<parameters.isopod_version>>
+  username: <<parameters.private_hub_username>>
+  password: <<parameters.private_hub_password>>
 
 parameters:
   path:
