--- a/src/jobs/js_integration_test_runner_job.yml
+++ b/src/jobs/js_integration_test_runner_job.yml
@@ -26,8 +26,8 @@ steps:
       package-manager: << parameters.package_manager >>
   # run test by running app server, then calling cypress run script
   - cypress/run-tests:
-      start-command: << parameters.start_command >>
-      cypress-command: << parameters.cypress_command >>
+      start-command: yarn << parameters.start_command >>
+      cypress-command: yarn << parameters.cypress_command >>
 
 parameters:
   cypress_command:
@@ -53,4 +53,4 @@ parameters:
   start_command:
     description: Command used to start your local dev server for Cypress to tests against
     type: string
-    default: yarn start
+    default: start
