--- a/src/commands/js_restore_build_outputs.yml
+++ b/src/commands/js_restore_build_outputs.yml
@@ -1,4 +1,7 @@
-description: Attach build files from environment specific directory in workspace
+description: >
+  Attach build files from environment specific directory in workspace
+  It is needed because today for next.js apps we have different builds for beta and prod.
+  To be reviewed at some point if we still need env specific folders in workspace
 parameters:
   build_env:
     type: enum
@@ -8,8 +11,5 @@ steps:
   - attach_workspace:
       name: WORKSPACE - Attaching from /<< parameters.build_env >>
       at: .
-  - run:
-      name: WORKSPACE - Copy files to root
-      command: |
-        cp -a << parameters.build_env >>/. .
-        rm -rf << parameters.build_env >>
+  - js_copy_workspace_to_root:
+      build_env: << parameters.build_env >>
