add executor params

--- a/src/jobs/js_integration_test_gcloud_runner_job.yml
+++ b/src/jobs/js_integration_test_gcloud_runner_job.yml
@@ -2,7 +2,10 @@ description: >
   Runs Cypress integration tests in gcloud, used for testing deployed, it's not parallelized.
   To be verified if it can be replaced with canary releases.
 
-executor: cypress_with_gcloud
+executor:
+  name: cypress_with_gcloud
+  username: $DOCKER_GAR_USERNAME
+  password: $DOCKER_GAR_PASSWORD
 
 steps:
   - checkout
