split lint and jest jobs

--- a/src/jobs/js_jest_runner_job.yml
+++ b/src/jobs/js_jest_runner_job.yml
@@ -9,11 +9,6 @@ executor: js
 resource_class: << parameters.resource_class >>
 parallelism: << parameters.parallelism >>
 
-define: &test-command |
-  shopt -s globstar # This is to make sure that ** is understood as pattern when globbing, e.g. /src/**/*.test.ts
-  circleci tests glob << parameters.globPattern >> | circleci tests split --split-by=<< parameters.split_by >> > testing/tmp-test-list
-  yarn << parameters.script >>
-
 # Execution
 
 steps:
@@ -23,12 +18,14 @@ steps:
   - run:
       name: Running tests
       # equally spread tests with a given split_by strategy
-      command:  *test-command
-      # this is specific to JEST test, it is run for any type of tests to keep the orb simple
-      # JEST_JUNIT_ADD_FILE_ATTRIBUTE - circleci require a 'file' attribute in xml file to group by timings
+      command: |
+        shopt -s globstar # This is to make sure that ** is understood as pattern when globbing, e.g. /src/**/*.test.ts
+        circleci tests glob << parameters.globPattern >> | circleci tests split --split-by=<< parameters.split_by >> > testing/tmp-test-list
+        yarn << parameters.script >>
       environment:
         JEST_JUNIT_OUTPUT_DIR: ./reports/junit
         JEST_JUNIT_ADD_FILE_ATTRIBUTE: 'true'
+        TESTING_LIBRARY_ASYNC_UTIL_TIMEOUT: 5000
   # storing test results is needed for circleci to compare them between runs and choose the best split
   # in circleci UI it results with TESTS tab being filled with results
   # for debugging use circleci's store_artifacts command, in circleci UI you will see the content of xml file
