complex jest/yarn commands

--- a/src/jobs/js_build_job.yml
+++ b/src/jobs/js_build_job.yml
@@ -23,7 +23,7 @@ steps:
       command: rm .env
   - run:
       name: Build the application
-      command: APP_ENV=<< parameters.build_env >> yarn build
+      command: APP_ENV=<< parameters.build_env >> yarn ci:build
   - js_save_build_outputs:
       app_type: << parameters.app_type >>
       build_env: << parameters.build_env >>
