--- a/src/jobs/js_integration_test_runner_job.yml
+++ b/src/jobs/js_integration_test_runner_job.yml
@@ -20,20 +20,16 @@ steps:
       # splitting by filesize is acceptable for our use cases, because we don't have many cypress tests.
       command: |
         shopt -s globstar # This is to make sure that ** is understood as pattern when globbing, e.g. /src/**/*.test.ts
-        circleci tests glob << parameters.globPattern >> | circleci tests split --split-by=<< parameters.split_by >> > testing/tmp-test-list
+        circleci tests glob << parameters.globPattern >> | circleci tests split --split-by=filesize > testing/tmp-test-list
   # install cypress binaries
   - cypress/install:
       package-manager: << parameters.package_manager >>
   # run test by running app server, then calling cypress run script
   - cypress/run-tests:
       start-command: yarn << parameters.start_command >>
-      cypress-command: yarn << parameters.cypress_command >>
+      cypress-command: yarn ci:cypress --spec $(cat testing/tmp-test-list) << parameters.cypress_options >>
 
 parameters:
-  cypress_command:
-    description: Command used to run your Cypress tests
-    type: string
-    default: yarn ci:cypress:local
   globPattern:
     type: string
   package_manager:
@@ -48,9 +44,6 @@ parameters:
   resource_class:
     type: string
     default: medium+
-  split_by:
-    type: enum
-    enum: ['timings', 'filesize']
   start_command:
     description: Command used to start your local dev server for Cypress to tests against
     type: string
@@ -59,3 +52,6 @@ parameters:
     type: enum
     enum: [ 'beta', 'prod']
     default: beta
+  cypress_options:
+    type: string
+    default: ''
