change storybook command

--- a/src/jobs/js_deploy_storybook.yml
+++ b/src/jobs/js_deploy_storybook.yml
@@ -13,7 +13,7 @@ steps:
       at: .
   - run:
       name: Build storybook
-      command: yarn build-storybook
+      command: yarn ci:build-storybook
   - store_artifacts:
       path: storybook-static
       destination: storybook
