executor as param for cypress_with_gcloud

--- a/src/jobs/js_integration_test_gcloud_runner_job.yml
+++ b/src/jobs/js_integration_test_gcloud_runner_job.yml
@@ -2,7 +2,7 @@ description: >
   Runs Cypress integration tests in gcloud, used for testing deployed, it's not parallelized.
   To be verified if it can be replaced with canary releases.
 
-executor: cypress_with_gcloud
+executor: << parameters.executor >>
 
 steps:
   - checkout
@@ -35,3 +35,6 @@ parameters:
   target:
     type: string
     default: ''
+  executor:
+    type: executor
+    default: cypress_with_gcloud
