--- a/src/jobs/js_install_dependencies_job.yml
+++ b/src/jobs/js_install_dependencies_job.yml
@@ -1,7 +1,12 @@
 description: >
   Install dependencies
-executor:
-  name: js
+
+# Executor
+
+executor: js
+
+# Execution
+
 steps:
   - checkout
   - run:
