handle env vars in build

--- a/src/jobs/js_build_job.yml
+++ b/src/jobs/js_build_job.yml
@@ -11,9 +11,19 @@ steps:
   - checkout
   - attach_workspace:
       at: .
+  # to be sure that local env is not used in production
   - run:
       name: Delete .env
       command: rm .env
+  - when:
+      condition:
+        equal: [ nextjs, << parameters.app_type >> ]
+      steps:
+        - run:
+          name: Generate build env
+          # expose the right env variables (beta or prod) to the builder
+          command: |
+            APP_ENV=<< parameters.build_env >> yarn run generate:build-env
   - run:
       name: Build the application
       command: APP_ENV=<< parameters.build_env >> yarn ci:build
@@ -39,3 +49,7 @@ parameters:
   resource_class:
     type: string
     default: large
+  app_type:
+    type: enum
+    enum: [ 'legacy', 'nextjs' ]
+    default: nextjs
